[build-system]
requires = [
    "setuptools >= 64",
]
build-backend = "setuptools.build_meta"

[project]
name = "grs_tetha"
description =  "Contains the Helios Workflows and Kestrel Workflows web applications"
version = "0.4.0"

keywords = []

[tool.setuptools.packages.find]
where = ["src"]
include = [
	"grs*",
	"tetha*",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*"]

[tool.black]
line-length = 120
